Fixed spacing on pages

--- a/src/app/dashboard/jobs/manage/page.module.css
+++ b/src/app/dashboard/jobs/manage/page.module.css
@@ -26,12 +26,6 @@
   justify-content: space-between;
 }
 
-.manageCardContainer {
-  height: 95vh;
-  overflow-y: hidden;
-  width: 100%;
-}
-
 .jobCardContainer {
   display: flex;
   flex-direction: column;
